# pylatkmc

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/: AGENT.md  README.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  HOW_IT_WORKS.md  KMOS_COMPARISON.md  PATTERN_DB.md  PYKMC_INTEGRATION.md  m4_species_results.json
models/ni_fe_cr_v1/: ni_fe_cr_v1.kmcspec.toml
models/ni_fe_cr_v1/examples/: config.kmcinit  config_10vac.kmcinit  config_5vac.kmcinit  input.ini  input_10vac.ini  input_5vac.ini
models/ni_fe_cr_v1/examples/full_100Ni/: compare_v02_v03.py  full_grid_results.csv  manifest.json  sub_0p3eV_buckets_to_flag.csv  sweep.sh  sweep_resume.sh
pylatkmc/: __init__.py  cli.py  codegen.py  decision_tree.py  family_prefactors.py  kmcfmt.py  loader.py  processes.py  rate_expression.py  ratebuilder.py  spec.py  translator.py
pylatkmc/templates/: avail.c.tmpl  events.h.tmpl  ratetable.c.tmpl  ratetable.h.tmpl
runtime/src/: main.c
runtime/src/core/: active_filter.c  active_filter.h  avail.h  avail_runtime.h  avail_sites.c  avail_sites.h  coord_codes.c  coord_codes.h  events_base.h  json_mini.c  json_mini.h  kmc.c  kmc.h  kmcfmt.c  kmcfmt.h  lattice.c  lattice.h  rng.c  rng.h  state.c  state.h  state_actions.c
runtime/src/io/: config_reader.c  config_reader.h  initconfig.c  initconfig.h  pykmc_out.c  pykmc_out.h  xyz_writer.c  xyz_writer.h
runtime/src/mpi/: replica.c  replica.h
tests/unit_py/: _runtime_test_helpers.c  conftest.py  test_active_filter.py  test_avail_sites.py  test_codegen.py  test_codegen_compiles.py  test_coord_table.py  test_decision_tree.py  test_family_prefactors.py  test_one_vac_no_high_density.py  test_preprocessor.py  test_processes.py  test_rate_expression.py  test_ratebuilder.py  test_spec_load.py  test_state_apply_actions.py  test_translator.py
tools/: build_initial_config.py  compare_msd_vs_pykmc.py  compare_species_aware.py  kmcfmt.py  xyz_to_kmcinit.py
