[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylatkmc"
version = "0.2.0"
description = "Pattern-DB code generator for pylatkmc: compile a model spec + curated FCC family catalogue into specialised C."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Stephen Kerr", email = "stephen.kerr1@ontariotechu.net" }]
dependencies = [
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
pylatkmc-gen = "pylatkmc.cli:main"

[tool.setuptools.packages.find]
include = ["pylatkmc*"]
exclude = ["tests*", "runtime*", "models*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit_py"]
python_files = ["test_*.py"]
addopts = ["-ra"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
