[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylatkmc"
version = "0.3.0"
description = "Pattern-DB code generator for pylatkmc: compile a model spec + curated FCC family catalogue into specialised C."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Stephen Kerr", email = "24jrpc@queensu.ca" }]
dependencies = [
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage      = "https://winteratomics.ca"
Repository    = "https://github.com/Kerrator/pylatkmc"
Issues        = "https://github.com/Kerrator/pylatkmc/issues"

[project.scripts]
pylatkmc-gen = "pylatkmc.cli:main"

[tool.setuptools.packages.find]
include = ["pylatkmc*"]
exclude = ["tests*", "runtime*", "models*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit_py"]
python_files = ["test_*.py"]
addopts = ["-ra"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests use one-line forwarding methods and `if cond: do(); other()`
# patterns extensively (helper wrappers around ctypes calls). Keep the
# style; these are not bugs.
"tests/**/*.py" = ["E701", "E702", "B905", "E402"]
# tools/ has a number of low-stakes lint fragments (zip without strict,
# unused loop var, semicolon statements in helper code). Suppress the
# noisier ones so CI doesn't fail on what is essentially script-quality
# code.
"tools/**/*.py" = ["B905", "B007", "E702", "E701", "F841", "E402",
                    "SIM102", "SIM108", "SIM115"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
